--- a/src/css/main.css
+++ b/src/css/main.css
@@ -105,7 +105,7 @@ nav li.active a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  background: url("/images/bg-img-1.jpg") no-repeat center;
+  background: url("../../images/bg-img-1.jpg") no-repeat center;
   background-attachment: scroll;
   background-size: auto;
   height: 100vh;
