changed file path for github

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -166,7 +166,7 @@ nav li.active a
     .home
     {
         display: flex;
-        background: url("/images/bg-img-1.jpg") no-repeat center;
+        background: url("../../images/bg-img-1.jpg") no-repeat center;
         background-attachment: scroll;
         background-size: auto;
         height: 100vh;
